--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
                 <a href="index.html">Home</a>
-                <a href="wwr/site-plan-photos.html">Street Photos</a>
+                <a href="wwr/site-plan-rafting.html">White Water Rafting</a>
                 <a href="positioning.html">Positioning Activity</a>
                 <a href="#">Personal Website</a>
                 <a href="#">Personal Siteplan</a>
