--- a/ice/wire-frame-class.html
+++ b/ice/wire-frame-class.html
@@ -23,8 +23,11 @@
                 <img scr="https://picsum.photos/1000/300" alt="Banner Description">
                 <h2>Banner Title</h2>
                 <p>Banner Paragraph Text</p>
-
             </section>
+        </div>
+        <div>
+            
+
         </div>
     </main>
     
