--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
+    <div id="content">
     <header>
-        <a id="log_link" href="index.html"> 
+        <a id="logo_link" href="index.html"> 
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
@@ -31,7 +32,7 @@
     </div>
     <main class="home-grid"> 
         <section class="rivers-card">
-            <img class="card-img" src="images/river.jpg" alt="river in forest">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
@@ -45,28 +46,31 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>  
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
+        
     </main>
     <footer>
         <p>Dry Oar &copy; 2025 - Parker Christenson</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
