--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,9 +20,9 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-box" src="images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
-        <section id="hero-img">
+        <section id="hero-msg">
             <h1 class="home-title">Have an Adventure</h1>
             <h4>Make Memories with Dry Oar</h4>
             <div class='button-box'>
