fixing up personal site

--- a/pjblondie/site-plan.html
+++ b/pjblondie/site-plan.html
@@ -121,29 +121,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Introduction Portfolio | Welcome Page
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>
+        This page will show people a collecton of my favorite photos I have taken and then will give a quote from me about why I take photos, something short and concise
+      </p>
+      <p>Images for the Introduction Porfolio</p>
+        <img src="/pjblondie/images/san_francisco_1.jpg" width="400"  alt="image for homepage">
+        <img src="/pjblondie/images/seattle_1.jpg" width="400"  alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>San Francisco Portfolio</h3>
       <p>
-        [Written copy for the Page 2 here]
+          This page will show my work from San Francisco and go into some details about halfway through describing the enviorment and shooting landscape for San Francisco
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+      <p>San Francisco Photos</p>
+        <img src="/pjblondie/images/san_francisco_2.jpg" width="400"  alt="image for page">
+        <img src="/pjblondie/images/san_francisco_3.jpg" width="400"  alt="image for page">
+        <img src="/pjblondie/images/san_francisco_4.jpg" width="400" alt="image for page">
+        <img src="/pjblondie/images/san_francisco_5.jpg" width="400"  alt="image for page">
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Seattle Portfolio</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This page will show my work from Seattle and go into some details about halfway through describing the enviorment and shooting landscape for Seattle
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Seattle Photos</p>
+        <img src="/pjblondie/images/seattle_2.jpg" width="400"  alt="image for page3">
+        <img src="/pjblondie/images/seattle_3.jpg" width="400" alt="image for page3">
+        <img src="/pjblondie/images/seattle_4.jpg" width="400"  alt="image for page3">
+        <img src="/pjblondie/images/seattle_5.jpg" width="400"  alt="image for page3">
 
       </ul>
       <hr>
