--- a/pjblondie/site-plan.html
+++ b/pjblondie/site-plan.html
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          San Francisco <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Seattle  <!-- change this -->
         </div>
 
         <div class="top">
