--- a/pjblondie/site-plan.html
+++ b/pjblondie/site-plan.html
@@ -136,10 +136,10 @@
           This page will show my work from San Francisco and go into some details about halfway through describing the enviorment and shooting landscape for San Francisco
       </p>
       <p>San Francisco Photos</p>
-        <img src="/pjblondie/images/san_francisco_2.jpg" width="400"  alt="image for page">
-        <img src="/pjblondie/images/san_francisco_3.jpg" width="400"  alt="image for page">
-        <img src="/pjblondie/images/san_francisco_4.jpg" width="400" alt="image for page">
-        <img src="/pjblondie/images/san_francisco_5.jpg" width="400"  alt="image for page">
+        <img src="images/san_francisco_2.jpg" width="400"  alt="image for page">
+        <img src="images/san_francisco_3.jpg" width="400"  alt="image for page">
+        <img src="images/san_francisco_4.jpg" width="400" alt="image for page">
+        <img src="images/san_francisco_5.jpg" width="400"  alt="image for page">
       </ul>
       <h3>Seattle Portfolio</h3>
       <p>
