--- a/pjblondie/site-plan.html
+++ b/pjblondie/site-plan.html
@@ -127,8 +127,8 @@
         This page will show people a collecton of my favorite photos I have taken and then will give a quote from me about why I take photos, something short and concise
       </p>
       <p>Images for the Introduction Porfolio</p>
-        <img src="/pjblondie/images/san_francisco_1.jpg" width="400"  alt="image for homepage">
-        <img src="/pjblondie/images/seattle_1.jpg" width="400"  alt="image for homepage">
+        <img src="images/san_francisco_1.jpg" width="400"  alt="image for homepage">
+        <img src="images/seattle_1.jpg" width="400"  alt="image for homepage">
 
       </ul>
       <h3>San Francisco Portfolio</h3>
@@ -146,10 +146,10 @@
         This page will show my work from Seattle and go into some details about halfway through describing the enviorment and shooting landscape for Seattle
       </p>
       <p>Seattle Photos</p>
-        <img src="/pjblondie/images/seattle_2.jpg" width="400"  alt="image for page3">
-        <img src="/pjblondie/images/seattle_3.jpg" width="400" alt="image for page3">
-        <img src="/pjblondie/images/seattle_4.jpg" width="400"  alt="image for page3">
-        <img src="/pjblondie/images/seattle_5.jpg" width="400"  alt="image for page3">
+        <img src="images/seattle_2.jpg" width="400"  alt="image for page3">
+        <img src="images/seattle_3.jpg" width="400" alt="image for page3">
+        <img src="images/seattle_4.jpg" width="400"  alt="image for page3">
+        <img src="images/seattle_5.jpg" width="400"  alt="image for page3">
 
       </ul>
       <hr>
