--- a/pjblondie/site-plan.html
+++ b/pjblondie/site-plan.html
@@ -161,21 +161,20 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This page will have a hero image/banner and then below will have an image box that will rotate through my favorite photos, I will use chatgpt for the java script
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homegrid.png" width="500" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/seattle_wireframe.png" width ="500" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/sanfrancisco_wireframe.png" width="500" alt="page 3 wireframe">
     </main>
   </body>
 
