finished html for personal website

--- a/pjblondie/san_francisco.html
+++ b/pjblondie/san_francisco.html
@@ -17,16 +17,18 @@
             </nav> 
         </a>
     </header>
-    <div id ="hero">
-        <div id="hero_box">
-            <img class="hero_image" src="images/site_logo.jpg">
-        </div>
-    </div>
-    <main>
-        <section class="rotating_images">
-            <img id="sanfran_main" src="images/san_francisco_1.jpg">
-            <img id="seattle_main" src="images/seattle_1.jpg">
+    <main class="san_francisco_main">
+        <h1 class="subpage_title">San Francisco</h1>
+        <img class="hero_image" src="images/san_francisco_2.jpg">
+        <section class="sub_hero_image">
+            <img  src="images/san_francisco_5.jpg">
+            <img  src="images/san_francisco_4.jpg">
         </section>
+        <section class="paragraph_img">
+            <img src="images/san_francisco_3.jpg">
+        </section>
+        <h2>About the Photo</h2>
+        <p id="san_francisco_about">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
     </main>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
@@ -42,7 +44,6 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-
     </footer>
 </body>
 </html>
