webpage homepage made!

--- a/pjblondie/san_francisco.html
+++ b/pjblondie/san_francisco.html
@@ -26,9 +26,10 @@
         </section>
         <section class="paragraph_img">
             <img src="images/san_francisco_3.jpg">
-        </section>
+        <section>
         <h2>About the Photo</h2>
         <p id="san_francisco_about">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
+        </section>
     </main>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
