Adding notes to the code

--- a/technical_teamwork/index.html
+++ b/technical_teamwork/index.html
@@ -1,3 +1,4 @@
+<!-- Basic website code don't worry about this-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- The small logo for the game is to be added here, it isn't necissary but is filler for right now, 
+     navigaton bar is also here-->
     <header>
         <a id="logo_link" href ="index.html">
             <img class="logo" src =>
@@ -18,7 +21,10 @@
             </nav> 
         </a>
     </header>
-  
+<!--The top of the page below header, will have a very large image that either already contains the title or will have 
+the h1 title text appear on top of it and then styled. The button should also be styled ontop of the image, 
+below the title of the game.
+-->
     <div id="hero_text">
         <h1>TRIVIA SHROOMS ADVENTURE</h1>
         <button id="download_button">Play Now</button>
@@ -33,10 +39,10 @@
             <img class="hero_image" src="images/">
         </div>
     </div>
+    <!-- a button linking to the lore html with <script> (yet to be made) Filler text, filler image, H2 Header use for CSS -->
     <section>
         <h2>LORE</h2>
         <section>
-            
             <button id="lore_button">Read More</button>
             <p id="lore_p_text">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
             <img class="lore_image" src="images/">
@@ -46,7 +52,9 @@
                 });
             </script>
         </section>
-    </section>   
+
+    </section> 
+    <!--On the wireframe multiple characters were present, slots for character images and explaining text, along with a button linking to character html-->  
     </section class="characters_main">
         <h2>CHARACTERS</h2>
         <p id="characters_p_text">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
@@ -70,6 +78,7 @@
                 });
             </script>
         </section>
+        <!--We may need an image for all of the devs and artists-->
         <section>
             <h2>MEET THE DEVS</h2>
             <section>
@@ -84,7 +93,9 @@
             </section>
     </section>
     <footer>
+    <!-- Footer has a small logo alongside the company copyright and with our socials attached(yet to be added)-->
         <p>TRIVIA SHROOMS ADVENTURE &copy; 2025 - Pingu Penguins</p>
+        <img class="logo" > 
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
