--- a/pjblondie/index.html
+++ b/pjblondie/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,23 +11,49 @@
         <a id="logo_link" href ="index.html">
             <img class="logo" src ="images/pjblondie.png" width="200" height="200" alt="pjblondie logo">
             <nav> 
-                <a href="index.html">Home</a>
-                <a href="seattle.html">Seattle</a>
-                <a href="san_francisco.html">San Francisco</a>
-                <a href="site-plan.html">Site Plan</a>
+                <a href="index.html" >Home</a>
+                <a href="seattle.html" >Seattle</a>
+                <a href="san_francisco.html" >San Francisco</a>
+                <a href="site-plan.html" >Site Plan</a>
             </nav> 
         </a>
     </header>
     <div id ="hero">
+        
         <div id="hero_box">
             <img class="hero_image" src="images/site_logo.jpg">
         </div>
+        <h1>Welcome</h1>
     </div>
     <main>
-        <section class="rotating_images">
-            <img id="sanfran_main" src="images/san_francisco_1.jpg">
+        <div class="rotating_images">
+            <button id="left-arrow">←</button>
+            <img id="sanfran_main" class= "active" src="images/san_francisco_1.jpg">
             <img id="seattle_main" src="images/seattle_1.jpg">
-        </section>
+            <button id="right-arrow">→</button>
+            <script>
+                const images = document.querySelectorAll(".rotating_images img");
+                let currentIndex= 0;
+                console.log(images);
+                function showImage(index) {
+                 images.forEach((img, i) => {
+                    if (i === index) {
+                        img.classList.add("active");    // Show this image
+                    } else {
+                        img.classList.remove("active"); // Hide all others
+                    }
+                    });
+                    }
+                    document.getElementById("left-arrow").addEventListener("click", () => {
+                        currentIndex = (currentIndex -1 +images.length) % images.length;
+                        showImage(currentIndex); 
+                    });
+                    document.getElementById("right-arrow").addEventListener("click", () => {
+                        currentIndex =(currentIndex +1) % images.length;
+                        showImage(currentIndex)
+                    });
+                </script>
+        </div>
     </main>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
