--- a/pjblondie/seattle.html
+++ b/pjblondie/seattle.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -20,12 +21,12 @@
     <main class="seattle_main">
         <h1 class="subpage_title">Seattle</h1>
         <img class="hero_image" src="images/seattle_4.jpg">
-        <section class="sub_hero_image">
-            <img  src="images/seattle_3.jpg">
-            <img  src="images/seattle_5.jpg">
+        <section>
+            <img class="sub_hero_image" src="images/seattle_3.jpg">
+            <img class="sub_hero_image" src="images/seattle_5.jpg">
         </section>
-        <section class="paragraph_img">
-            <img src="images/seattle_2.jpg">
+        <section>
+            <img class="paragraph_img" src="images/seattle_2.jpg">
         </section>
         <h2>About the Photo</h2>
         <p id="seattle_about">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
