--- a/technical_teamwork/site-plan.html
+++ b/technical_teamwork/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
+      <h1>Trivia Shrooms Adventure Site Plan</h1>
    
     
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -21,11 +21,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>To provide a place for Shroomers to learn and adventure</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Fellow Shroomers</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
