San Fran finished

--- a/pjblondie/seattle.html
+++ b/pjblondie/seattle.html
@@ -18,18 +18,16 @@
             </nav> 
         </a>
     </header>
+    <h1 class="subpage_title">Seattle</h1>
     <main class="seattle_main">
-        <h1 class="subpage_title">Seattle</h1>
         <img class="hero_image" src="images/seattle_4.jpg">
-        <section>
-            <img class="sub_hero_image" src="images/seattle_3.jpg">
-            <img class="sub_hero_image" src="images/seattle_5.jpg">
-        </section>
-        <section>
-            <img class="paragraph_img" src="images/seattle_2.jpg">
-        </section>
+        <img class="sub_hero_image" src="images/seattle_3.jpg">
+        <img class="sub_hero_image" src="images/seattle_5.jpg">
+        <img class="paragraph_img_s" src="images/seattle_2.jpg">
+        <div id="seattle_about">
         <h2>About the Photo</h2>
-        <p id="seattle_about">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
+        <p>_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
+        </div>
     </main>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
