--- a/pjblondie/san_francisco.html
+++ b/pjblondie/san_francisco.html
@@ -18,19 +18,18 @@
             </nav> 
         </a>
     </header>
+
+    <h1 class="subpage_title">San Francisco</h1>
     <main class="san_francisco_main">
-        <h1 class="subpage_title">San Francisco</h1>
         <img class="hero_image" src="images/san_francisco_2.jpg">
-        <section>
-            <img class="sub_hero_image" src="images/san_francisco_5.jpg">
-            <img class="sub_hero_image"src="images/san_francisco_4.jpg">
-        </section>
-        <section >
+        
+            <img class="sub_hero_image"id= "smoking_photo" src="images/san_francisco_5.jpg">
+            <img class="sub_hero_image" id= "bridge_photo" src="images/san_francisco_4.jpg">
             <img class="paragraph_img" src="images/san_francisco_3.jpg">
-        <section>
-        <h2>About the Photo</h2>
-        <p id="san_francisco_about">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
-        </section>
+        <div id="san_francisco_about">
+            <h2>About the Photo</h2>
+            <p>A british child experiencing a cablecar for the first time. After the photo was taken, he jumped into his mothers arms to better look out at the city as colorful rustic buildings mixed between skyscrappers passed them by.</p>
+        </div>
     </main>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
