--- a/technical_teamwork/index.html
+++ b/technical_teamwork/index.html
@@ -16,7 +16,6 @@
             <nav> 
                 <a href="index.html">Home</a>
                 <a href="lore.html">Lore</a>
-                <a href="lore.html">Characters</a>
                 <a href="download.html">Download</a>
                 <a href="developers.html">Meet the Devs</a>
             </nav> 
@@ -28,7 +27,7 @@ below the title of the game.
 -->
 
 <div id="hero_text">
-    <h1>TRIVIA SHROOMS ADVENTURE</h1>
+    <h1>TRIVIA TRUFFLE</h1>
     <button id="download_button" style="background: none; border: none; padding: 0;">
         <img src="images/PLAY.png" width="300" alt="Play Button">
     </button>
@@ -49,8 +48,7 @@ below the title of the game.
         <h2>LORE</h2>
         <section>
             <button id="lore_button">Read More</button>
-            <p id="lore_p_text">_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
-            <img class="lore_image" src="images/">
+        
             <script>
                 document.getElementById("lore_button").addEventListener("click", function() {
                     window.location.href = "lore.html";
@@ -65,7 +63,6 @@ below the title of the game.
         <div id="character_1">
             <img class="characters_image" src="images/front_mushroom.png">
             <p>_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
-            
         </div>
         <script>
             document.getElementById("lore_button").addEventListener("click", function() {
