All changes please don't break thank you

--- a/pjblondie/seattle.html
+++ b/pjblondie/seattle.html
@@ -23,10 +23,12 @@
         <img class="hero_image" src="images/seattle_4.jpg">
         <img class="sub_hero_image" src="images/seattle_3.jpg">
         <img class="sub_hero_image" src="images/seattle_5.jpg">
-        <img class="paragraph_img_s" src="images/seattle_2.jpg">
-        <div id="seattle_about">
-        <h2>About the Photo</h2>
-        <p>_filler_text__filler_text__filler_text__filler_text__filler_text__filler_text_</p>
+        <div class="seattle_text_image">
+            <img class="paragraph_img_s" src="images/seattle_2.jpg">
+            <div id="seattle_about">
+                <h2>About the Photo</h2>
+                <p>A child riding her Dad's back on street leading to Pike Place Market. They stop along the way to play with giant chess pieces at a park</p>
+            </div>
         </div>
     </main>
     <footer>
