--- a/pjblondie/index.html
+++ b/pjblondie/index.html
@@ -16,6 +16,7 @@
                 <a href="seattle.html" >Seattle</a>
                 <a href="san_francisco.html" >San Francisco</a>
                 <a href="site-plan.html" >Site Plan</a>
+                <a href="blog.html"> Blog</a>
             </nav> 
         </a>
     </header>
