--- a/pjblondie/blog.html
+++ b/pjblondie/blog.html
@@ -15,6 +15,7 @@
                 <a href="index.html" >Home</a>
                 <a href="seattle.html" >Seattle</a>
                 <a href="san_francisco.html" >San Francisco</a>
+                <a href="blog.html"> Blog</a>
                 <a href="site-plan.html" >Site Plan</a>
             </nav> 
         </a>
