--- a/pjblondie/blog.html
+++ b/pjblondie/blog.html
@@ -20,6 +20,22 @@
             </nav> 
         </a>
     </header>
+    <body>
+        <h1> BLOG</h1>
+        <h2 id="homelessness"> Homelessness In Cities</h2>
+        <section id="homeless">
+        <img src="images/seattle_1.jpg" width="700px">
+        <p> Taking photos in cities has increased my appretiation for the individual. I think I understood that everyone around me had complex lives but something changed when I started photographing people. I saw their emotions in person, and for a moment experienced their lives.</p>
+        <img src="images/seattle_5.jpg" width="700px">
+        <p> When discussing homelessness, individuality matters the most. Each individual that ends up homeless has a complex story behind their suffering and their end result. It becomes natural to walk past a person underneath a clump of blankets and assume they are just apart of a bigger issue. </p>
+        <img src="images/seattle_3.jpg" width="700px">
+        <p> Many take a statistical approach on one side politically, and a abrassive on the other. "Provide mass housing for them," the left says, the provided housing then gets destroyed. "They got themselves into the situation, its a natural consequence", the right says, regardless they are still suffering and dying.</p>
+        <img src="images/street_closed.jpg" width="700px">
+        <p> I believe that both these ideas fall short of what I personally believe to be the main problem that comes with homelessness: failure to understand people on personal level. Homelessness itself is an isolation from ones problems, people, and in turn life. No one wants to be homeless, but often times it becomes easier then returning back to normal life.</p>
+        <img src="images/china_town_clothes.jpeg" width ="700px">
+        <P> People are creatures of habit, if we develop positive ones, those will be reinforced, if we develop negative ones, they will be reinforced. Alongside that people are good at surviving no matter the conditions, even if they are suffering they will find a way to continue living. Because of these two factors homeless individuals are trapped between the comfort of unchanging and the steps it takes to come back to society.</P>
+        </section>
+    </body>
     <footer>
         <p>pjblondie &copy; 2025 - Parker Christenson</p>
         <p><a href="site-plan.html">Site Plan</a></p>
