a new start for new semester

--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 | Home Page</title>
+    <title>Parker's Home Page</title>
 </head>
 <body>
     <header>
-        <nav>
-                <a href="index.html">Home</a>
-                <a href="wwr/site-plan-rafting.html">White Water Rafting</a>
-                <a href="positioning.html">Positioning Activity</a>
-                <a href="#">Personal Website</a>
-                <a href="#">Personal Siteplan</a>
-        </nav>
-        <main>
-            <h1>Parker Christenson</h1>
-            <img src="DSC09733.jpg" width= 350 px alt ="Self-Portrait of Me">
-            <p>Hello! I'm Parker, I'm a sophmore at BYUI who is majoring in Computer Science.</p> 
-            <p>I enjoy doing street photography, rock climbing, and struggling to figure out mods for video games.</p>
-            <p>I'm from Rexburg, I know I made it far from home, but my home away from home is San Francisco.</p>
-            <p>I want to design my own website for my street photography but here's my current one if you'd like to see some photos:</p>
-            <p>pjblondie.myportfolio.com</p>
-        <main>
-    <header>
+        <img class="logo" src ="images/profile_pic.jpg"  height="200" alt="pjblondie logo">
+        WDD131 Home Page
+    </header>
 </body>
 </html>
