--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta author>
     <title>Parker's Home Page</title>
 </head>
 <body>
-    <header>
-        <img class="logo" src ="images/profile_pic.jpg"  height="200" alt="pjblondie logo">
-        WDD131 Home Page
-    </header>
+<header>
+    <h1>Parker's WDD130 Homepage</h1>
+    <a id="logo_link" href="index.html">
+        <img class="logo" src="images/profile_pic.jpg" width="400">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="project_1.html">Project 1</a>
+            <a href="project_2.html">Project 2</a>
+            <a href="project_3.html">Project 3</a>
+        </nav>
+    </a>
+            
+        </nav> 
+    </a>
+</header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
