--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta author>
+    <meta author="Parker Christenson">
+    <meta description="A home page for hosting assignments for the semester">
     <title>Parker's Home Page</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
         <img class="logo" src="images/profile_pic.jpg" width="400">
         <nav>
             <a href="index.html">Home</a>
+            <a href="ponder/meta-css.html">Ponder 1</a>
             <a href="project_1.html">Project 1</a>
             <a href="project_2.html">Project 2</a>
             <a href="project_3.html">Project 3</a>
