current progress towards meta-css

--- a/ponder/meta-css.html
+++ b/ponder/meta-css.html
@@ -1,36 +1,36 @@
 
 <meta name="description" content="An in-depth guide to HTML meta tags.">
-
-<meta name="author" content="Jane Doe">
+<link rel="stylesheet" href="styles/meta-css.css">
+<meta name="author" content="Parker Christenson">
 <head>
 
 </head>
 <header>
 
 </header>  
-<body>
-
-            
+<body>         
     <div id="content">
         <h1>HTML, CSS, and JS</h1>
-        <p>The foundational technologies that power websites and web applications</p>
+        <p id="colored_text">The foundational technologies that power websites and web applications</p>
         <hr>
-        <img src="https://wddbyui.github.io/wdd131/images/trifecta.png" alt="JS, CSS, and HTML logos">
+        <img id="coding_pics"src="https://wddbyui.github.io/wdd131/images/trifecta.png" alt="JS, CSS, and HTML logos">
         <div id="topics">
             <h2>HyperText Markup Language</h2>
             <ul class="list">
-                <li>Defines the structure and content of a web page.</li>
-                <li>Without HTML there's nothing for the browser to display.</li>
+                <p>Defines the structure and content of a web page.</p>
+                <p>Without HTML there's nothing for the browser to display.</p>
             </ul>
             <h2>Cascading Style Sheets</h2>
             <ul class="list">
-                <li>Controls how the HTML elements look.</li>
-                <li>Without CSS pages look plain and unstyled.</li>
+                <p>Controls how the HTML elements look.</p>
+                <p>Without CSS pages look plain and unstyled.</p>
             </ul>
             <h2>JavaScript</h2>
             <ul class="list">
-                <li>Adds interactivity and dynamic behavior.</li>
-                <li>Without JavaScript nothing on the page responds dynamically to user actions.</li>
+                <p>Adds interactivity and dynamic behavior.</p>
+                <p>Without JavaScript nothing on the page responds</p>
+                <p>dynamically to user actions.</p>
+        
             </ul>
         </div>
     </div>
