--- a/ponder/meta-css.html
+++ b/ponder/meta-css.html
@@ -17,19 +17,18 @@
         <div id="topics">
             <h2>HyperText Markup Language</h2>
             <ul class="list">
-                <p>Defines the structure and content of a web page.</p>
-                <p>Without HTML there's nothing for the browser to display.</p>
+                <li>Defines the structure and content of a web page.</li>
+                <li>Without HTML there's nothing for the browser to display.</li>
             </ul>
             <h2>Cascading Style Sheets</h2>
             <ul class="list">
-                <p>Controls how the HTML elements look.</p>
-                <p>Without CSS pages look plain and unstyled.</p>
+                <li>Controls how the HTML elements look.</li>
+                <li>Without CSS pages look plain and unstyled.</li>
             </ul>
             <h2>JavaScript</h2>
             <ul class="list">
-                <p>Adds interactivity and dynamic behavior.</p>
-                <p>Without JavaScript nothing on the page responds</p>
-                <p>dynamically to user actions.</p>
+                <li>Adds interactivity and dynamic behavior.</li>
+                <li>Without JavaScript nothing on the page responds dynamically to user actions.</li>
         
             </ul>
         </div>
