Added a landing page for ponder assignments to organize easier, added jsvar assignment and js to go with it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="logo" src="images/profile_pic.jpg" width="400">
         <nav>
             <a href="index.html">Home</a>
-            <a href="ponder/meta-css.html">Ponder 1</a>
+            <a href="ponder/ponder.html">Ponder Assignments</a>
             <a href="project_1.html">Project 1</a>
             <a href="project_2.html">Project 2</a>
             <a href="project_3.html">Project 3</a>
