I think we're supposed to do this for assignment?

--- a/ponder/metacss/meta-css.html
+++ b/ponder/metacss/meta-css.html
@@ -2,6 +2,8 @@
 <meta name="description" content="An in-depth guide to HTML meta tags.">
 <link rel="stylesheet" href="styles/meta-css.css">
 <meta name="author" content="Parker Christenson">
+<script src="jsvar.js" defer></script>
+
 <head>
 
 </head>
