Removed jsvar as it was not needed

--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Ponder Assignments</h1>
             <a href="/ponder/metacss/meta-css.html">Ponder 1</a>
-            <a href="/ponder/jsvar/jsvar.html">Ponder 2</a>
+            <a href="">Ponder 2</a>
             <a href="project_2.html">Ponder 3</a>
             <a href="project_3.html">Ponder 4</a>
 </header>
