--- a/ponder/metacss/meta-css.html
+++ b/ponder/metacss/meta-css.html
@@ -2,7 +2,7 @@
 <meta name="description" content="An in-depth guide to HTML meta tags.">
 <link rel="stylesheet" href="styles/meta-css.css">
 <meta name="author" content="Parker Christenson">
-<script src="jsvar.js" defer></script>
+<script src="script.js" defer></script>
 
 <head>
 
