--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="ponder/ponder.html">Ponder Assignments</a>
+            <a href="prove/prove.html">Prove Assignments</a>
             <a href="project_1.html">Project 1</a>
             <a href="project_2.html">Project 2</a>
             <a href="project_3.html">Project 3</a>
