--- a/prove/prove.html
+++ b/prove/prove.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <h1>Prove Assignments</h1>
-            <a href=prove_1/prove_1.html>Prove 1</a>
+            <a href="prove_1/prove_1.html">Prove 1</a>
             <a href="ponder_2.html">Prove 2</a>
             <a href="project_2.html">Prove 3</a>
             <a href="project_3.html">Prove 4</a>
