--- a/ponder/metacss/meta-css.html
+++ b/ponder/metacss/meta-css.html
@@ -43,6 +43,7 @@
     <option value="html">HTML</option>
     <option value="css">CSS</option>
     <option value="js">JavaScript</option>
+    <option value="rick">rick</option>
 </select>                   
             
     </div>
