--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Ponder Assignments</h1>
             <a href=metacss/meta-css.html>Ponder 1</a>
-            <a href="ponder_2.html">Ponder 2</a>
+            <a href="comp_thinking/compThinking.html">Ponder 2</a>
             <a href="project_2.html">Ponder 3</a>
             <a href="project_3.html">Ponder 4</a>
 </header>
