added respon_design to ponder page

--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -11,7 +11,7 @@
     <h1>Ponder Assignments</h1>
             <a href=metacss/meta-css.html>Ponder 1</a>
             <a href="comp_thinking/compThinking.html">Ponder 2</a>
-            <a href="project_2.html">Ponder 3</a>
+            <a href="respon_design/respon_design.html">Ponder 3</a>
             <a href="project_3.html">Ponder 4</a>
 </header>
 </body>
