added dark mode

--- a/prove/prove_1/prove_1.html
+++ b/prove/prove_1/prove_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <script src="prove_1.js" defer></script>
     <title>Ponder 1 </title>
 </head>
 <body>
@@ -22,6 +23,14 @@
             <li class="list_ele"> Delievering education that is affordable for students and the Church</li>
         </ol>
         <img src="images/byui-logo.webp" class="byui_logo">
+        <!--Image for dark mode is logo-white-->
+        <img src="images/byui-logo-white.png" class="byui_logo_white">
     </main>
+    <label for="light/dark_mode">Choose One: </label>
+    <select name="light_dark" id="light_dark">
+        <option>Choose One: </option>
+        <option value="Light">Light</option>
+        <option value="Dark">Dark</option>
+    </select>
 </body>
 </html>
