first section close to completions

--- a/prove/p2_coolpics/index.html
+++ b/prove/p2_coolpics/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="coolpics.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Cool Pics 📷</h1>
+        <button class="menu_btn">Menu</button>
+    </header>
+    <main>
+        <h2>Current Work</h2>
+        <img src="images/cool_pics.jpg"  id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+        <img src="images/cool_pics.jpg" id="cool_pics">
+    </main>
+    <footer>
+        <p>©2025 Not a real site 😊</p>
+    </footer>
 </body>
 </html>
