mobile mode implemented

--- a/prove/p2_coolpics/index.html
+++ b/prove/p2_coolpics/index.html
@@ -11,18 +11,43 @@
     <header>
         <h1>Cool Pics 📷</h1>
         <button class="menu_btn">Menu</button>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">People</a>
+            <a href="#">Places</a>
+            <a href="#">About</a>
+        </nav>
     </header>
     <main>
         <h2>Current Work</h2>
-        <img src="images/cool_pics.jpg"  id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
-        <img src="images/cool_pics.jpg" id="cool_pics">
+        <div id="cool_pics">
+            <img src="images/cool_pics.jpg">
+        </div>
+        <div id="cool_pics" >
+            <img src="images/cool_pics.jpg" >
+        </div>
+        <div id="cool_pics">
+            <img src="images/cool_pics.jpg">
+        </div>
+        <div id="cool_pics" >
+            <img src="images/cool_pics.jpg" >
+        </div>
+        <div id="cool_pics">
+            <img src="images/cool_pics.jpg">
+        </div>
+        <div id="cool_pics" >
+            <img src="images/cool_pics.jpg" >
+        </div>
+        <div id="cool_pics">
+            <img src="images/cool_pics.jpg">
+        </div>
+        <div id="cool_pics" >
+            <img src="images/cool_pics.jpg" >
+        </div>
+        <div id="cool_pics" >
+            <img src="images/cool_pics.jpg" >
+        </div>
+
     </main>
     <footer>
         <p>©2025 Not a real site 😊</p>
