All done with cool pics except minor styling tweaks

--- a/prove/p2_coolpics/index.html
+++ b/prove/p2_coolpics/index.html
@@ -16,8 +16,10 @@
             <a href="#">People</a>
             <a href="#">Places</a>
             <a href="#">About</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
+    
     <main>
         <h2>Current Work</h2>
         <div id="cool_pics">
