--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -12,7 +12,7 @@
             <a href=metacss/meta-css.html>Ponder 1</a>
             <a href="comp_thinking/compThinking.html">Ponder 2</a>
             <a href="respon_design/respon_design.html">Ponder 3</a>
-            <a href="project_3.html">Ponder 4</a>
+            <a href="gallery_with_model/index.html">Ponder 4</a>
 </header>
 </body>
 </html>
