Mostly done with prove

--- a/prove/p2_coolpics/index.html
+++ b/prove/p2_coolpics/index.html
@@ -22,31 +22,31 @@
     
     <main>
         <h2>Current Work</h2>
-        <div id="cool_pics">
+        <div class="cool_pics">
             <img src="images/cool_pics.jpg">
         </div>
-        <div id="cool_pics" >
+        <div class="cool_pics" >
             <img src="images/cool_pics.jpg" >
         </div>
-        <div id="cool_pics">
+        <div class="cool_pics">
             <img src="images/cool_pics.jpg">
         </div>
-        <div id="cool_pics" >
+        <div class="cool_pics" >
             <img src="images/cool_pics.jpg" >
         </div>
-        <div id="cool_pics">
+        <div class="cool_pics">
             <img src="images/cool_pics.jpg">
         </div>
-        <div id="cool_pics" >
+        <div class="cool_pics" >
             <img src="images/cool_pics.jpg" >
         </div>
-        <div id="cool_pics">
+        <div class="cool_pics">
             <img src="images/cool_pics.jpg">
         </div>
-        <div id="cool_pics" >
+        <div class="cool_pics" >
             <img src="images/cool_pics.jpg" >
         </div>
-        <div id="cool_pics" >
+        <div class="cool_pics" >
             <img src="images/cool_pics.jpg" >
         </div>
 
