--- a/prove/prove.html
+++ b/prove/prove.html
@@ -10,7 +10,7 @@
 <header>
     <h1>Prove Assignments</h1>
             <a href="prove_1/prove_1.html">Prove 1</a>
-            <a href="ponder_2.html">Prove 2</a>
+            <a href="p2_coolpics/coolpics.js">Prove 2</a>
             <a href="p3_blog/index.html">Prove 3</a>
             <a href="project_3.html">Prove 4</a>
 </header>
