--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -13,6 +13,7 @@
             <a href="comp_thinking/compThinking.html">Ponder 2</a>
             <a href="respon_design/respon_design.html">Ponder 3</a>
             <a href="gallery_with_model/index.html">Ponder 4</a>
+            <a href="array_method/index.html">Ponder 5</a>
 </header>
 </body>
 </html>
