Added student names

--- a/ponder/array_method/index.html
+++ b/ponder/array_method/index.html
@@ -12,5 +12,10 @@
         <hr>
         
     </header>
+    <main>
+        <div id = "js_names">
+
+        </div>
+    </main>
 </body>
 </html>
