--- a/ponder/array_method/index.html
+++ b/ponder/array_method/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grading Website</title>
     <script src="js/array.js" defer></script>
+    <link rel="stylesheet" href="styles/array.css">
 </head>
 <body>
     <header>
