added start to second thing

--- a/ponder/array_method/index.html
+++ b/ponder/array_method/index.html
@@ -14,7 +14,10 @@
         
     </header>
     <main>
-        <div id = "js_names">
+        <ul id="gradePoint">
+
+        </ul>
+        <div id="js_names">
 
         </div>
     </main>
