--- a/ponder/ponder.html
+++ b/ponder/ponder.html
@@ -14,6 +14,7 @@
             <a href="respon_design/respon_design.html">Ponder 3</a>
             <a href="gallery_with_model/index.html">Ponder 4</a>
             <a href="array_method/index.html">Ponder 5</a>
+            <a href="Accessibility_Design/index.html">Ponder 6</a>
 </header>
 </body>
 </html>
