added js to accesibility

--- a/ponder/Accessibility_Design/index.html
+++ b/ponder/Accessibility_Design/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="js/access.js" defer></script>
 </head>
 <body>
     
@@ -40,6 +41,8 @@
       <p><strong>Rating:</strong> <span>⭐⭐⭐⭐</span></p>
       <p id='desc'>Based on the true story of Elder John H. Groberg, a missionary in Tonga in the 1950s, this film tells a powerful story of faith, hardship, and miracles.</p>
     </article>
+
+        
   </section>
 </main>
 <footer>
